<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/titleBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MainTitle"
                android:textSize="24sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <SearchView
                android:layout_width="380dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/text_button_shape"
                android:iconifiedByDefault="true"
                android:queryHint="검색어를 입력해주세요." />
        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TableRow
                android:layout_width="match_parent"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_height="100dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/Category_all_Layout"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton8"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:background="@drawable/imga_text_button_shape"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/all"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="전체"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/ctg_all"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:background="@drawable/imga_text_button_shape"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/all"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/text_all"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="전체"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton10"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:background="@drawable/imga_text_button_shape"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/all"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="전체"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton9"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:background="@drawable/imga_text_button_shape"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/all"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="전체"
                            android:textAlignment="center" />

                    </LinearLayout>
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/Category_all_Layout2"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButt1"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:background="@drawable/imga_text_button_shape"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/all"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/textVie4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="전체"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearyout"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/ct_all"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:background="@drawable/imga_text_button_shape"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/all"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/text_all2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="전체"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButton130"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:background="@drawable/imga_text_button_shape"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/all"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/textView46"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="전체"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout23"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/imageButto1n9"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:background="@drawable/imga_text_button_shape"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/all"
                            tools:ignore="SpeakableTextPresentCheck" />

                        <TextView
                            android:id="@+id/te2xtView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="전체"
                            android:textAlignment="center" />

                    </LinearLayout>
                </LinearLayout>
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <TextView
                    android:id="@+id/Ranking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_mrginBottom="26dp"
                    android:text="@string/main_ranking_title"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/crown"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="11dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/good_button"
                    app:layout_constraintHorizontal_bias="0.137"
                    app:layout_constraintStart_toEndOf="@+id/Ranking"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/crown"
                    android:contentDescription="@string/crown" />

                <Button
                    android:id="@+id/good_button"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/text_button_shape"
                    android:text="@string/main_rankign_good"
                    android:textColor="#111111"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/hate_button"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/hate_button"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/text_button_shape"
                    android:text="@string/main_ranking_hate"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>